fix layout issue

--- a/src/views/shopping/shopping.css
+++ b/src/views/shopping/shopping.css
@@ -1,18 +1,18 @@
-.shopping__scrollable-areas {
+.shopping__scrollable-area {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
-  bottom: 6rem;
+  height: calc(100vh - 4rem);
   overflow-x: hidden;
   overflow-y: scroll;
 }
 
 .shopping__footer {
-  position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
   bottom: 0;
   box-shadow: 0 -2px 7px #00000068;
-  z-index: 2000;
+  z-index: 5000;
 }
